<resources>
    <string name="app_name">FanficApp</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="main_page">Main page</string>
    <string name="registration">Register profile</string>
    <string name="submit">Submit</string>
    <string name="user_name">User name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="welcome">Welcome to FanficApp</string>
    <string name="posts_page">Start reading</string>
    <string name="posts">Posts</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login to your profile</string>
    <string name="favourites">Favourites</string>
    <string name="settings">Settings</string>
    <string name="no_favourites">There is no saved posts</string>
    <string name="save">Save</string>
</resources>